# Withefuck

./: .gitignore  Cargo.toml  README.en.md  README.md  build_packages.sh  config.json  install.sh  readlog.py  uninstall.sh  update.sh  version.txt  wtf  wtf.fish  wtf.py  wtf.sh  wtf_profile.fish  wtf_profile.sh  wtf_script.py  测试文档.txt
.github/workflows/: update-cargo-on-rs-tag.yml  update-version-on-tag.yml
packaging/: build_packages.sh
src/: config.rs  llm.rs  logs.rs  main.rs  测试文档.txt
